feat: added `Cache-Control` headers to resources that may be cached.
